Stopped jerky movement because of scrollbar

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,6 +19,7 @@
   border: #999 1px solid 
 body
   background: white
+  height: 1000px
 
 .group        
   position: relative 
